--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Jasper Huijsmans <huysmans@users.sourceforge.net>
 Olivier Fourdan <fourdan@xfce.org>
-Xavier Maillard
+Xavier Maillard <zedek@fxgsproject.org>
