Add vertical panel option by Botsie. Now this is a cool feature.
(Old svn revision: 3317)

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ TODO list for xfce4
 
 Major features for 4.0
 ----------------------
-* port clock widget			In progress (zeDek)
+* port clock widget			Mostly done (zeDek)
 * unify panel controls			Done
   (make everything a module)
 * improve module configuration		
@@ -13,13 +13,17 @@ Major features for 4.0
     (pass xmlNodePtr to module)
 * improve global configuration		
   - add stay-on-top option		Done
-  - split up dialog			In progress
+  - split up dialog			Mostly done
   - port to new xfce-wide system	
 * write API docs for plugin writers
 * write user docs
 * provide good default configuration
 * allow different positions for 
   popup button in all sizes		Done
+* Update popup positioning function to
+  new account for panel orientation
+* Idem for panel positioning and style
+  settings.
 
 Nice to have for 4.0
 --------------------
