Fixed the move handle positioning. Or did I?
(Old svn revision: 3342)

--- a/TODO
+++ b/TODO
@@ -22,11 +22,11 @@ Major features for 4.0
 * provide good default configuration
 * allow different positions for
    - popup button in all sizes          Done
-* Update popup positioning function to
-  new account for panel orientation
+* Update popup positioning function to	
+  new account for panel orientation	Done
 * Idem for panel positioning and style
-  settings.
-* Update module API for variable sized modules
+  settings.				Done
+* Update module API for variable sized modules		Rejected
   void set_orientation(PanelControl *pc, int orientation);
   void minimum_size(PanelControl *pc, int size, int *width, int *height);
 * Add support of the NET_DESKTOP_NAMES form freedesktop.org standard
