Update TODO list
(Old svn revision: 3367)

--- a/TODO
+++ b/TODO
@@ -3,9 +3,9 @@ TODO list for xfce4
 
 Major features for 4.0
 ----------------------
-* port clock widget			Mostly done (zeDek)
-   - add color handling (fg/bg)         In progress (zeDek)
-   - fix the tiny size mode             In progress (zeDek)
+* port clock widget			Done
+   - add color handling (fg/bg)         (canceled)
+   - fix the tiny size mode             Done
 * unify panel controls			Done
   (make everything a module)
 * improve module configuration
