Update to debian/-subdir included in xfce4_20021127-1.
(Old svn revision: 3444)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-xfce4 (4.0.0+cvs.20021109-1) unstable; urgency=low
+xfce4 (4.0.0+cvs.20021127-1) unstable; urgency=low
 
-  * Initial Release.
+  * Initial Release. (Closes: #166633)
 
- -- Martin Loschwitz <madkiss@madkiss.org>  Sat, 09 Nov 2002 18:40:00 +0100
+ -- Martin Loschwitz <madkiss@madkiss.org>  Thu, 27 Nov 2002 15:00:00 +0100
