Update ChangeLog and TODO file
(Old svn revision: 3466)

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ TODO list for xfce4
 
 Major features for 4.0
 ----------------------
-* port to global settings manager system
+* port to global settings manager system	DONE
 * write API docs for plugin writers
 * write user docs
 * provide good default configuration
@@ -21,5 +21,7 @@ Other feature ideas
 * optional pager instead of desktop buttons
 * swallow apps
 * hide popup buttons
+* notification area plugin (as used by GNOME and KDE). 
+  This would be really cool!
 
 
