added spanish translation and fixed a typo in source code
(Old svn revision: 3502)

--- a/po/es.po
+++ b/po/es.po
@@ -1,57 +1,57 @@
-# XFce 4 Panel.
-# Copyright (C) 2003 Jasper Huijsmans 
-# This file is distributed under the same license as the xfce4 package.
-# Jasper Huijsmans <huysmans@users.sourceforge.net>, 2003.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <edscott@imp.mx>, 2003.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4 VERSION\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2003-01-23 23:59+0100\n"
-"PO-Revision-Date: 24-01-03 12:43:34+0100\n"
-"Last-Translator: Jasper Huijsmans <huysmans@sourceforge.net>\n"
-"Language-Team: Nederlands <nl@li.org>\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: panel/controls.c:296
 msgid "/_Edit ..."
-msgstr "/_Bewerken ..."
+msgstr "/_Editar ..."
 
 #: panel/controls.c:297
 msgid "/_Remove"
-msgstr "/_Verwijderen"
+msgstr "/_Remover"
 
 #: panel/controls.c:299 panel/handle.c:82
 msgid "/Add _new item"
-msgstr "_Nieuw item toevoegen"
+msgstr "/Adicionar nuevo elemento"
 
 #: panel/controls.c:572
 msgid "This item has no configuration options"
-msgstr "Geen configuratie opties"
+msgstr "Este elemento no tiene opciones de configuración"
 
 #: panel/controls_dialog.c:243
 msgid "Change item"
-msgstr "Item aanpassen"
+msgstr "Cambiar elemento"
 
 #: panel/controls_dialog.c:252 panel/item_dialog.c:915
 #: settings/xfce_settings_dialog.c:771
 msgid "_Revert"
-msgstr "_Herstellen"
+msgstr "_Revertir"
 
 #: panel/controls_dialog.c:256 panel/item_dialog.c:920
 #: settings/xfce_settings_dialog.c:776
 msgid "_Done"
-msgstr "_Sluiten"
+msgstr "Termina_Do"
 
 #: panel/controls_dialog.c:278
 msgid "Type:"
-msgstr "Type:"
+msgstr "Tipo:"
 
 #: panel/controls_dialog.c:294 panel/item_dialog.c:493
 msgid "Position:"
-msgstr "Positie:"
+msgstr "Posición"
 
 #: panel/controls_dialog.c:332
 msgid ""
@@ -59,41 +59,41 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Hiermee verwijdert u ook het popup menu.\n"
+"Remover un elemento también removerá su menú emergente.\n"
 "\n"
-"Wilt u het item verwijderen?"
+"Desea remover el elemento?"
 
 #: panel/handle.c:80
 msgid "/XFce Panel"
-msgstr "XFce Panel"
+msgstr "/Panel XFce"
 
 #: panel/handle.c:84
 msgid "/_Panel settings"
-msgstr "/_Panel opties"
+msgstr "/Configuración del _Panel"
 
 #: panel/handle.c:85
 msgid "/_Settings manager"
-msgstr "/_Opties manager"
+msgstr "/Administrador de configuración"
 
 #: panel/handle.c:87
 msgid "/_About XFce"
-msgstr "/XFce _info"
+msgstr "/_Acerca de XFce"
 
 #: panel/handle.c:88
 msgid "/_Help"
-msgstr "/_Help"
+msgstr "/Ayuda"
 
 #: panel/handle.c:90
 msgid "/_Lock screen"
-msgstr "/Scherm _beveiligen"
+msgstr "/B_Loquear estación"
 
 #: panel/handle.c:91
 msgid "/E_xit"
-msgstr "/_Afsluiten"
+msgstr "/Salir"
 
 #: panel/icons.c:65
 msgid "Default"
-msgstr "Standaard"
+msgstr "Por omisión"
 
 #: panel/icons.c:66
 msgid "Editor"
@@ -101,19 +101,19 @@ msgstr "Editor"
 
 #: panel/icons.c:67
 msgid "File management"
-msgstr "Bestandsbeheer"
+msgstr "Administración de archivos"
 
 #: panel/icons.c:68
 msgid "Utilities"
-msgstr "Hulpmiddelen"
+msgstr "Utilerías"
 
 #: panel/icons.c:69
 msgid "Games"
-msgstr "Spellen"
+msgstr "Juegos"
 
 #: panel/icons.c:70
 msgid "Help browser"
-msgstr "Help browser"
+msgstr "Navegador de ayuda"
 
 #: panel/icons.c:71
 msgid "Multimedia"
@@ -121,23 +121,23 @@ msgstr "Multimedia"
 
 #: panel/icons.c:72
 msgid "Network"
-msgstr "Netwerk"
+msgstr "Red"
 
 #: panel/icons.c:73
 msgid "Graphics"
-msgstr "Grafisch"
+msgstr "Gráficos"
 
 #: panel/icons.c:74
 msgid "Printer"
-msgstr "Printer"
+msgstr "Impresora"
 
 #: panel/icons.c:75
 msgid "Productivity"
-msgstr "Productiviteit"
+msgstr "Productividad"
 
 #: panel/icons.c:76
 msgid "Sound"
-msgstr "Geluid"
+msgstr "Sonido"
 
 #: panel/icons.c:77
 msgid "Terminal"
@@ -149,83 +149,83 @@ msgstr "XFce 4"
 
 #: panel/info.c:145
 msgid "By Olivier Fourdan (c) 1997-2003"
-msgstr "Door Olivier Fourdan (c) 1997-2003"
+msgstr "Por Olivier Fourdan (c) 1997-2003"
 
 #: panel/info.c:160 panel/info.c:271 plugins/switcher/switcher.c:619
 #: plugins/systembuttons/systembuttons.c:136
 #: plugins/systembuttons/systembuttons.c:446
 msgid "Info"
-msgstr "Info"
+msgstr "Información"
 
 #: panel/info.c:223
 msgid "Credits"
-msgstr "Credits"
+msgstr "Créditos"
 
 #: panel/info.c:244
 msgid "License"
-msgstr "Licentie"
+msgstr "Licencia"
 
 #: panel/item.c:76 panel/popup.c:238
 msgid "Click mouse button 3 to change item"
-msgstr "Klik muisknop 3 om item te bewerken"
+msgstr "Pinche el botón 3 del ratón para cambiar elemento"
 
 #: panel/item.c:212
 msgid "Launcher"
-msgstr "Starter"
+msgstr ""
 
 #: panel/item_dialog.c:240
 msgid "Other Icon"
-msgstr "Ander pictogram"
+msgstr "Otro ícono"
 
 #: panel/item_dialog.c:264
 msgid "Select icon"
-msgstr "Pictogram selecteren"
+msgstr "Seleccionar ícono"
 
 #: panel/item_dialog.c:299
 msgid "Icon:"
-msgstr "Pictogram:"
+msgstr "Ícono:"
 
 #: panel/item_dialog.c:343
 msgid "Select command"
-msgstr "Commando selecteren"
+msgstr "Seleccionar comando"
 
 #: panel/item_dialog.c:366
 msgid "Command:"
-msgstr "Commando:"
+msgstr "Comando:"
 
 #: panel/item_dialog.c:394 plugins/mailcheck/mailcheck.c:574
 msgid "Run in _terminal"
-msgstr "Uitvoeren in _terminal"
+msgstr "Ejecutar en _terminal"
 
 #: panel/item_dialog.c:416
 msgid "Caption:"
-msgstr "Naam:"
+msgstr ""
 
 #: panel/item_dialog.c:454
 msgid "Tooltip:"
-msgstr "Tooltip:"
+msgstr ""
 
 #: panel/item_dialog.c:582
 msgid "Icon Preview"
-msgstr "Voorbeeld"
+msgstr "Prevista de ícono"
 
 #: panel/item_dialog.c:586
 msgid "Drag file onto this frame to change the icon"
-msgstr "Sleep bestand naar dit frame om pictogram te wijzigen"
+msgstr "Jala el archivo a este marco para cambiar el ícono"
 
 #. create dialog
 #: panel/item_dialog.c:902
 msgid "Change menu item"
-msgstr "Menu item veranderen"
+msgstr "Cambiar elemento de menú"
 
 #. add buttons
 #: panel/item_dialog.c:910
 msgid "Remove"
-msgstr "Verwijderen"
+msgstr "Remover"
 
 #: panel/main.c:82
 msgid "Are you sure you want to exit?"
-msgstr "Weet u zeker dat u wil afsluiten?"
+msgstr "¿Está seguro de querer salir?"
 
 #: panel/main.c:163
 #, c-format
@@ -234,8 +234,8 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, versie %s\n"
-"Onderdeel van de XFce Desktop Environment\n"
+"%s, versión %s\n"
+"Parte del ambiente de escritorio XFce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:181
@@ -244,261 +244,258 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"De window manager ondersteunt de nieuwe window manager hints niet, zoals die "
-"zijn gedefinieerd op http://www.freedesktop.org. \n"
-"Sommige XFce functie zullen niet werken zoals bedoeld."
 
 #: panel/mcs_client.c:211
 msgid "Settings manager not available"
-msgstr "Optie manager niet beschikbaar"
+msgstr "Administrador de sessión no disponible"
 
 #: panel/panel.c:84 settings/xfce_settings_plugin.c:66
 msgid "XFce Panel"
-msgstr "XFce Panel"
+msgstr "Panel XFce"
 
 #: panel/popup.c:196
 msgid "Add launcher"
-msgstr "Toevoegen"
+msgstr "Adicionar launcher"
 
 #: panel/popup.c:200
 msgid "Add new item"
-msgstr "Nieuw item toevoegen"
+msgstr "Adicionar nuevo elemento"
 
 #: panel/popup.c:265
 msgid "Menu"
-msgstr "Menu"
+msgstr "Menú"
 
 #: panel/xfce_support.c:530
 msgid "Select file"
-msgstr "Bestand selecteren"
+msgstr "Seleccionar archivo"
 
 #: settings/xfce_settings_dialog.c:208
 msgid "Tiny"
-msgstr "Zeer klein"
+msgstr "Pequeñito"
 
 #: settings/xfce_settings_dialog.c:212
 msgid "Small"
-msgstr "Klein"
+msgstr "Pequeño"
 
 #: settings/xfce_settings_dialog.c:216
 msgid "Medium"
-msgstr "Medium"
+msgstr "Mediano"
 
 #: settings/xfce_settings_dialog.c:220
 msgid "Large"
-msgstr "Groot"
+msgstr "Grande"
 
 #: settings/xfce_settings_dialog.c:253
 msgid "Traditional"
-msgstr "Traditioneel"
+msgstr "Tradicional"
 
 #: settings/xfce_settings_dialog.c:257
 msgid "Modern"
-msgstr "Modern"
+msgstr "Moderno"
 
 #: settings/xfce_settings_dialog.c:332
 msgid "Horizontal"
-msgstr "Horizontaal"
+msgstr "Horizontal"
 
 #: settings/xfce_settings_dialog.c:336
 msgid "Vertical"
-msgstr "Verticaal"
+msgstr "Vertical"
 
 #: settings/xfce_settings_dialog.c:369 settings/xfce_settings_dialog.c:613
 msgid "Left"
-msgstr "Links"
+msgstr "Izquierda"
 
 #: settings/xfce_settings_dialog.c:373 settings/xfce_settings_dialog.c:614
 msgid "Right"
-msgstr "Rechts"
+msgstr "Derecha"
 
 #: settings/xfce_settings_dialog.c:377 settings/xfce_settings_dialog.c:612
 #: settings/xfce_settings_dialog.c:667
 msgid "Top"
-msgstr "Boven"
+msgstr "Arriba"
 
 #: settings/xfce_settings_dialog.c:381 settings/xfce_settings_dialog.c:611
 #: settings/xfce_settings_dialog.c:675
 msgid "Bottom"
-msgstr "Onder"
+msgstr "Abajo"
 
 #: settings/xfce_settings_dialog.c:514
 msgid "Panel size:"
-msgstr "Panel grootte:"
+msgstr "Tamaño de panel:"
 
 #: settings/xfce_settings_dialog.c:530
 msgid "Panel orientation:"
-msgstr "Panel orientatie:"
+msgstr "Orientación de panel:"
 
 #: settings/xfce_settings_dialog.c:547
 msgid "Popup position:"
-msgstr "Popup positie:"
+msgstr "Posición de menú emergente:"
 
 #: settings/xfce_settings_dialog.c:564
 msgid "Panel style:"
-msgstr "Panel stijl:"
+msgstr "Estilo del panel"
 
 #: settings/xfce_settings_dialog.c:580
 msgid "Icon theme:"
-msgstr "Pictogram thema:"
+msgstr "Tema de íconos:"
 
 #: settings/xfce_settings_dialog.c:651
 msgid "Panel layer:"
-msgstr "Panel laag:"
+msgstr "Nivel del panel:"
 
 #: settings/xfce_settings_dialog.c:671
 msgid "Normal"
-msgstr "Normaal"
+msgstr "Normal"
 
 #: settings/xfce_settings_dialog.c:690
 msgid "Center the panel:"
-msgstr "Panel centreren:"
+msgstr "Centrar el panel:"
 
 #: settings/xfce_settings_dialog.c:714
 msgid "Set"
-msgstr "Zet"
+msgstr "Fijar"
 
 #: settings/xfce_settings_dialog.c:765 settings/xfce_settings_dialog.c:786
 msgid "XFce Panel Settings"
-msgstr "XFce Panel Opties"
+msgstr "Configuración del panel XFce"
 
 #: settings/xfce_settings_dialog.c:804
 msgid "Appearance"
-msgstr "Weergave"
+msgstr "Apariencia"
 
 #: settings/xfce_settings_dialog.c:822
 msgid "Position"
-msgstr "Positie"
+msgstr "Posición"
 
 #. Clock tooltip - From xfce3
 #. FIXME: Find another place for that
 #: plugins/clock/clock.c:43
 msgid "Sunday"
-msgstr "Zondag"
+msgstr "Domingo"
 
 #: plugins/clock/clock.c:44
 msgid "Monday"
-msgstr "Maandag"
+msgstr "Lunes"
 
 #: plugins/clock/clock.c:45
 msgid "Tuesday"
-msgstr "Dinsdag"
+msgstr "Martes"
 
 #: plugins/clock/clock.c:46
 msgid "Wednesday"
-msgstr "Woensdag"
+msgstr "Miércoles"
 
 #: plugins/clock/clock.c:47
 msgid "Thursday"
-msgstr "Donderdag"
+msgstr "Jueves"
 
 #: plugins/clock/clock.c:48
 msgid "Friday"
-msgstr "Vrijdag"
+msgstr "Viernes"
 
 #: plugins/clock/clock.c:49
 msgid "Saturday"
-msgstr "Zaterdag"
+msgstr "Sábado"
 
 #: plugins/clock/clock.c:52
 msgid "January"
-msgstr "Januari"
+msgstr "Enero"
 
 #: plugins/clock/clock.c:53
 msgid "February"
-msgstr "Februari"
+msgstr "Febrero"
 
 #: plugins/clock/clock.c:54
 msgid "March"
-msgstr "Maart"
+msgstr "Marzo"
 
 #: plugins/clock/clock.c:55
 msgid "April"
-msgstr "April"
+msgstr "Abril"
 
 #: plugins/clock/clock.c:56
 msgid "May"
-msgstr "Mei"
+msgstr "Mayo"
 
 #: plugins/clock/clock.c:57
 msgid "June"
-msgstr "Juni"
+msgstr "Junio"
 
 #: plugins/clock/clock.c:58
 msgid "July"
-msgstr "Juli"
+msgstr "Julio"
 
 #: plugins/clock/clock.c:59
 msgid "August"
-msgstr "Augustus"
+msgstr "Agosto"
 
 #: plugins/clock/clock.c:60
 msgid "September"
-msgstr "September"
+msgstr "Septiembre"
 
 #: plugins/clock/clock.c:61
 msgid "October"
-msgstr "Oktober"
+msgstr "Octubre"
 
 #: plugins/clock/clock.c:62
 msgid "November"
-msgstr "November"
+msgstr "Noviembre"
 
 #: plugins/clock/clock.c:63
 msgid "December"
-msgstr "December"
+msgstr "Diciembre"
 
 #: plugins/clock/clock.c:295
 msgid "Analog"
-msgstr "Analoog"
+msgstr "Análogo"
 
 #: plugins/clock/clock.c:299
 msgid "Digital"
-msgstr "Digitaal"
+msgstr ""
 
 #: plugins/clock/clock.c:303
 msgid "LED"
-msgstr "LED"
+msgstr ""
 
 #: plugins/clock/clock.c:570
 msgid "Clock type:"
-msgstr "Klok type:"
+msgstr "Tipo de reloj:"
 
 #: plugins/clock/clock.c:584
 msgid "24 hour clock:"
-msgstr "24-uurs klok:"
+msgstr "Reloj de 24 horas:"
 
 #: plugins/clock/clock.c:598
 msgid "Toggle AM PM mode :"
-msgstr "AM PM modus aan/uit :"
+msgstr "Intercambiar modo AM PM"
 
 #: plugins/clock/clock.c:612
 msgid "Show seconds:"
-msgstr "Secondes tonen:"
+msgstr "Mostrar segundos:"
 
 #: plugins/clock/clock.c:659
 msgid "Xfce Clock"
-msgstr "Xfce Klok"
+msgstr "Reloj XFce"
 
 #: plugins/mailcheck/mailcheck.c:509
 msgid "Mail box:"
-msgstr "Mail box:"
+msgstr "Buzón de correo:"
 
 #: plugins/mailcheck/mailcheck.c:537
 msgid "Mail command:"
-msgstr "Mail commando:"
+msgstr "Comando de correo:"
 
 #: plugins/mailcheck/mailcheck.c:545
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Commando voor de knop op het paneel"
+msgstr "Comando a ejecutar cuando el botón del panel se pincha"
 
 #: plugins/mailcheck/mailcheck.c:588
 msgid "Interval (sec):"
-msgstr "Interval (sec):"
+msgstr "Intervalo (sec):"
 
 #: plugins/mailcheck/mailcheck.c:639
 msgid "Mail check"
-msgstr "Mail check"
+msgstr "Revisar correo"
 
 #: plugins/switcher/switcher.c:570 plugins/systembuttons/systembuttons.c:51
 msgid ""
@@ -506,68 +503,68 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Geen toegang tot het configuratie systeem\n"
+"El acceso al sistema de configuración está vedado.\n"
 "\n"
-"Vraag uw systeembeheerder voor meer informatie"
+"Pregúntele por qué a su administrador de sistema"
 
 #. fixed tooltips, since the user can't change the icon anyway
 #: plugins/switcher/switcher.c:618 plugins/systembuttons/systembuttons.c:133
 msgid "Lock the screen"
-msgstr "Scherm beveiligen"
+msgstr ""
 
 #: plugins/switcher/switcher.c:620 plugins/systembuttons/systembuttons.c:135
 #: plugins/systembuttons/systembuttons.c:445
 msgid "Setup"
-msgstr "Opties"
+msgstr "Configuración"
 
 #: plugins/switcher/switcher.c:621 plugins/systembuttons/systembuttons.c:134
 #: plugins/systembuttons/systembuttons.c:444
 msgid "Exit"
-msgstr "Afsluiten"
+msgstr "Salir"
 
 #: plugins/switcher/switcher.c:1231
 msgid "Show minibuttons"
-msgstr "Miniknoppen tonen"
+msgstr "Mostrar minibotones"
 
 #: plugins/switcher/switcher.c:1251
 msgid "Use graphical pager"
-msgstr "Grafische pager gebruiken"
+msgstr "Usar pager gráfico"
 
 #: plugins/switcher/switcher.c:1299
 msgid "Desktop switcher"
-msgstr "Bureaublad wisselaar"
+msgstr "Cambiador de escritorio"
 
 #: plugins/systembuttons/systembuttons.c:427
 msgid "Show two buttons:"
-msgstr "Twee knoppen tonen:"
+msgstr "Mostrar dos botones"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:443
 msgid "Lock"
-msgstr "Schermbeveiliging"
+msgstr "Bloquear"
 
 #: plugins/systembuttons/systembuttons.c:474
 msgid "Button 1:"
-msgstr "Knop 1:"
+msgstr "Botón 1:"
 
 #: plugins/systembuttons/systembuttons.c:490
 msgid "Button 2:"
-msgstr "Knop 2:"
+msgstr "Botón 2:"
 
 #: plugins/systembuttons/systembuttons.c:527
 msgid "System buttons"
-msgstr "Systeemknoppen"
+msgstr "Botones de sistema"
 
 #: plugins/trash/trash.c:133 plugins/trash/trash.c:166
 msgid "Trashcan: 0 files"
-msgstr "Prullenbak: 0 bestanden"
+msgstr "Bote de basura: 0 archivos"
 
 #: plugins/trash/trash.c:199 plugins/trash/trash.c:202
 #: plugins/trash/trash.c:205
 #, c-format
 msgid "Trashcan: %d files / %d %s"
-msgstr "Prullenbak: %d bestanden / %d %s"
+msgstr "Bote de basura: %d archivos / %d %s"
 
 #: plugins/trash/trash.c:292
 msgid "Trash can"
-msgstr "Prullenbak"
+msgstr "Bote de basura"
