Fix encoding not specified in es.po, regenerate pot file (required after Edscott fixed a typo in the source) and adjust french translation.
(Old svn revision: 3504)

--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4 1.0.0\n"
-"POT-Creation-Date: 2003-01-23 23:59+0100\n"
+"POT-Creation-Date: 2003-01-24 15:52+0100\n"
 "PO-Revision-Date: 2003-01-23 23:59+0100\n"
 "Last-Translator: Olivier Fourdan <fourdan@xfce.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,15 +25,15 @@ msgstr "/_Supprimer"
 
 #: panel/controls.c:299 panel/handle.c:82
 msgid "/Add _new item"
-msgstr "/Ajouter un _nouvel item "
+msgstr "/Ajouter une _nouvelle entrée"
 
 #: panel/controls.c:572
 msgid "This item has no configuration options"
-msgstr "Cet item n'a pas d'option de configuration"
+msgstr "Cette entrée n'a pas d'option de configuration"
 
 #: panel/controls_dialog.c:243
 msgid "Change item"
-msgstr "Modifier l'item"
+msgstr "Modifier l'entrée"
 
 #: panel/controls_dialog.c:252 panel/item_dialog.c:915
 #: settings/xfce_settings_dialog.c:771
@@ -58,9 +58,10 @@ msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
 "Do you want to remove the item?"
-msgstr "Supprimer un item va supprimer le menu associé.\n"
+msgstr ""
+"Supprimer une entrée va supprimer le menu associé.\n"
 "\n"
-"Voulez-vous supprimer cet item ?"
+"Voulez-vous supprimer cet entrée ?"
 
 #: panel/handle.c:80
 msgid "/XFce Panel"
@@ -131,7 +132,7 @@ msgid "Printer"
 msgstr "Imprimantes"
 
 #: panel/icons.c:75
-msgid "Productvity"
+msgid "Productivity"
 msgstr "Productivité"
 
 #: panel/icons.c:76
@@ -166,7 +167,7 @@ msgstr "License"
 
 #: panel/item.c:76 panel/popup.c:238
 msgid "Click mouse button 3 to change item"
-msgstr "CLiquer avec le bouton 3 pour changer un item"
+msgstr "Cliquer avec le bouton 3 pour modifier une entrée"
 
 #: panel/item.c:212
 msgid "Launcher"
@@ -261,7 +262,7 @@ msgstr "Ajouter un lanceur"
 
 #: panel/popup.c:200
 msgid "Add new item"
-msgstr "Ajouter un item"
+msgstr "Ajouter une entrée"
 
 #: panel/popup.c:265
 msgid "Menu"
@@ -497,7 +498,7 @@ msgstr "Intervale (sec.) :"
 
 #: plugins/mailcheck/mailcheck.c:639
 msgid "Mail check"
-msgstr "Vérifier le courrier"
+msgstr "Contrôle de courrier"
 
 #: plugins/switcher/switcher.c:570 plugins/systembuttons/systembuttons.c:51
 msgid ""
@@ -555,7 +556,7 @@ msgstr "Bouton 2 :"
 
 #: plugins/systembuttons/systembuttons.c:527
 msgid "System buttons"
-msgstr "Boutons système :"
+msgstr "Boutons système"
 
 #: plugins/trash/trash.c:133 plugins/trash/trash.c:166
 msgid "Trashcan: 0 files"
