--- a/po/xfce4-panel.pot
+++ b/po/xfce4-panel.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2003-01-23 23:59+0100\n"
+"POT-Creation-Date: 2003-01-24 15:52+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -129,7 +129,7 @@ msgid "Printer"
 msgstr ""
 
 #: panel/icons.c:75
-msgid "Productvity"
+msgid "Productivity"
 msgstr ""
 
 #: panel/icons.c:76
