Cleanup. Unify PanelItem and MenuItem to avoid code duplication. Small bug fixes.
(Old svn revision: 3516)

--- a/README
+++ b/README
@@ -3,10 +3,10 @@ README for xfce version 4.x
 
 WHAT IS IT ?
 ------------
-'xfce' is the panel of the XFce Desktop Environment. It is modeled after the 
-CDE panel and, of course, previous versions of xfce.
-This version is based on GTK2 and should have all the advantages that come with
-this new and improved toolkit (see http://www.gtk.org).
+'xfce4-panel' is the panel of the XFce Desktop Environment. It is modeled 
+after the CDE panel and, of course, previous versions of xfce.
+This version is based on GTK2 and should have all the advantages that come 
+with this new and improved toolkit (see http://www.gtk.org).
 
 WHAT'S NEW ?
 ------------
@@ -18,7 +18,10 @@ manager hints as defined on http://www.freedesktop.org. This means that you
 will need a compliant window manager for xfce to function properly (preferably 
 xfwm4 ;-).
 
-The panel can now hold normal buttons and dynamic modules.
+Highlights from the new panel include:
+o vertical and horizontal mode
+o icon themes
+o dynamic modules as well as traditional luancher buttons
 
 INFO FOR DEVELOPERS
 ===================
