--- a/TODO
+++ b/TODO
@@ -7,21 +7,21 @@ Major features for 4.0
 * write API docs for plugin writers
 * write user docs
 * provide good default configuration
-* new dialog for panel controls (treeview with dialog area)
-  adding/removing controls from here.
 
 Nice to have for 4.0
 --------------------
 * more themes: Night, KDE, Next, WindowsXP, BeOS, ...
   (not too many released with xfce4; < 10)
-* volume control plugin
+* new dialog for panel controls (treeview with dialog area)
+  adding/removing controls from here.
 
 Other feature ideas 
 ------------------------------------
-* optional pager instead of desktop buttons
-* swallow apps
-* hide popup buttons
+* volume control plugin
 * notification area plugin (as used by GNOME and KDE). 
   This would be really cool!
+* dockapps support
+* swallow apps
+* hide popup buttons
 
 
