Update info text. Use AUTHORS for the credits page. Fix strange characters in COPYING
(Old svn revision: 3519)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
-Jasper Huijsmans <huysmans@users.sourceforge.net>
 Olivier Fourdan <fourdan@xfce.org>
+Jasper Huijsmans <huysmans@users.sourceforge.net>
+Edscott Wilson Garcia <edscott@imp.mx>
+Biju Chacko <botsie@myrealbox.com>
+Jens Luedicke <jens@irs-net.com>
+Martin Loschwitz <madkiss@users.sourceforge.net>
 Xavier Maillard <zedek@fxgsproject.org>
